Saving new entry 2016-01-31-19-05-22

--- a/gh-weblog-2/content/posts/markdown/2016-01-31-19-05-22.md
+++ b/gh-weblog-2/content/posts/markdown/2016-01-31-19-05-22.md
@@ -97,7 +97,7 @@ First off, a good steel. Steels are not for sharpening a knife, they're for maki
 
 Of course, steeling isn't sharpening, and your knife *will* lose its edge eventually. When that happens, it's time to whip out the grinding stones. I have a combination 400 grit/2000 grit whetstone, and badly dulled knives first get a treatment at 400 before moving on to 2000.
 
-Finally there's that little "speedy sharp" thing: that's a carbide steel strip on a handle. A word of warning: this is *not* a sharpener. This is a shaver, and does what word implies: the carbide steel strip is much, much stronger than the metal used to make  your knife, and running this across the cutting edge literally shaves off some of the metal. It's a very fast way to give a knife a quick edge, but you've just reduced your knife width by far more than you would if you used a sharpening stone. Use this as your only method of sharpening and you're literally going to just run out of knife. That said, I use this to quickly strip a knife of whatever oxidation or environmental coating it may have picked up when I bake baguettes, where getting a good scoring across the loaves before the bread goes into the oven is far more important to me than wearing out a knife. Just stroke the edge with minimal force a few times and you're good to go. As long as you remember to also give the knife a quick rinse because again: you're shaving it. There will be residue.   
+Finally there's that little "speedy sharp" thing: that's a carbide steel strip on a handle. A word of warning: this is *not* a sharpener. This is a shaver, and does what that word implies: the carbide steel strip is much, much stronger than the metal used to make  your knife, and running this across the cutting edge literally shaves off some of the metal. It's a very fast way to give a knife a quick edge, but you've just reduced your knife width by far more than you would if you used a sharpening stone. Use this as your only method of sharpening and you're literally going to just run out of knife. That said, I use this to quickly strip a knife of whatever oxidation or environmental coating it may have picked up when I bake baguettes, where getting a good scoring across the loaves before the bread goes into the oven is far more important to me than wearing out a knife. Just stroke the edge with minimal force a few times and you're good to go. As long as you remember to also give the knife a quick rinse because again: you're shaving it. There will be residue.   
 
 # And that's it.
 
