--- a/gh-weblog-2/content/posts/markdown/2016-01-31-19-05-22.md
+++ b/gh-weblog-2/content/posts/markdown/2016-01-31-19-05-22.md
@@ -13,7 +13,7 @@ Let's talk about this collection, shall we?
 ## The chef knife
 ![](/gh-weblog-2/images/knives/knives-02.jpg)
 
-The chef knife is, as far as I'm concerned, the absolute minimum necessary to "do everything". It can slice, it can dice (well, with your help), it can chop, it can pare (while a little inconveniently, it absolutely can), it can fillet, it crush, as far as I'm concerned it is the only knife you **need** in a kitchen. Although that doesn't mean you should use it for all those things because you'll probably have at least one or two knives that can do one or more of those things better. 
+The chef knife is, as far as I'm concerned, the absolute minimum necessary to "do everything". It can slice, it can dice (well, with your help), it can chop, it can pare (while a little inconveniently, it absolutely can), it can fillet, it can crush, as far as I'm concerned it is the only knife you **need** in a kitchen. Although that doesn't mean you should use it for all those things because you'll probably have at least one or two knives that can do one or more of those things better. 
 
 I have a few chef knives, but these are the two I use on a daily basis. The top is essentially my backup for when more than one person's in the kitchen, if it's just me I'll typically use... well, perhaps the level of wear will give it away: I use the knife with the broken tip. It's from a $30 knife set I bought over 10 years ago, and is as sharp as any $200 knife. In terms of actual weight, it's fairly heavy, but it's extremely well balanced so it feels like it has very little true weight to it, and it dances around in your hand if you want it to. Yes, that's the level of satisfaction a nice kitchen knife can have. 
 
