Saving new entry 2016-01-31-19-05-22

--- a/gh-weblog-2/content/posts/markdown/2016-01-31-19-05-22.md
+++ b/gh-weblog-2/content/posts/markdown/2016-01-31-19-05-22.md
@@ -22,7 +22,7 @@ I use these for big cuts, slicing, as well as chopping up things. Bog standard u
 ## The utility knife
 ![](/gh-weblog-2/images/knives/knives-03.jpg)
 
-The utility knife is for smaller jobs. The blade's too short for more things a chef knife is good for, but it's great for incisions and stripping (both of those apply to vegetables as much as to meats).
+The utility knife is for smaller jobs. The blade's too short for most things a chef knife is good for, but it's great for incisions and stripping (both of those apply to vegetables as much as to meats).
 
 ## The paring knife
 ![](/gh-weblog-2/images/knives/knives-04.jpg)
