Saving new entry 2016-01-31-19-05-22

--- a/gh-weblog-2/content/posts/markdown/2016-01-31-19-05-22.md
+++ b/gh-weblog-2/content/posts/markdown/2016-01-31-19-05-22.md
@@ -36,7 +36,7 @@ While this looks like a super heavy thing, and it's certainly heavier than a reg
 
 Simple rule: things with sharp edges are meant for cutting, not hitting. The value in a cleaver is its size and solidity; do the initial cut, drive the cleaver in, then drive it through. The softer the thing you're cleaving, the more you can "chop" rather than drive, but this is not TV, and you don't wield a regular cleaver like it's a hatchet.   
 
-For instance: chunking up Chinese barbecue pork: yes. cleaving through a lamb shoulder: no. Splitting a squash: absolutely. Chopping a chicken thigh in half: ... kind of not, no. I mean, if you absolutely have to, but really you want the next item on this list instead.
+For instance: chunking up Chinese barbecue pork: yes. cleaving through a lamb shoulder: no. Splitting a squash: absolutely. Chopping a chicken thigh in half: ... kind of not, no. I mean, you can if you absolutely have to, but really you want the next item on this list instead.
 
 
 ## A nice not-really-sharp bone cleaver
