Saving new entry 2016-01-31-19-05-22

--- a/gh-weblog-2/content/posts/markdown/2016-01-31-19-05-22.md
+++ b/gh-weblog-2/content/posts/markdown/2016-01-31-19-05-22.md
@@ -49,7 +49,7 @@ Unlike a sharp cleaver, bone cleavers *are* wielded like hatchets: it's pretty m
 ## A tako sashimi knife
 ![](/gh-weblog-2/images/knives/knives-07.jpg)
 
-"Japanese knives!", aye. The tako sashimi knife is, not surprisingly, a sashimi knife, meaning it's intended for precision-slicing. The "tako" part in the name implies it's intended for octopus cutting, but it's shaped well enough to be used for fish and shellfish, too. It might look a bit long, but honestly I'm looking into replacing it with a longer version: sashimi is raw, which means nothing will have been done to the cut to hide imprecisions or imperfections, and the human tongue is an amazing organ: it will detect rough cuts. The longer the knife, the longer you can make a single, constant pressure cut, which means the cut surface will be absolutely smooth. Unlike a chef knife, where you're often cutting away from yourself, you cut towards yourself with a sashimi knife. Even seen or bowed a violin? It's pretty much like that. Very little pressure, let the knife do the cutting as you pull it in.
+"Japanese knives!", aye. The tako sashimi knife is, not surprisingly, a sashimi knife, meaning it's intended for precision-slicing. The "tako" part in the name implies it's intended for octopus cutting, but it's shaped well enough to be used for fish and shellfish, too. It might look a bit long, but honestly I'm looking into replacing it with a longer version: sashimi is raw, which means nothing will have been done to the cut to hide imprecisions or imperfections, and the human tongue is an amazing organ: it will detect rough cuts. The longer the knife, the longer you can make a single, constant pressure cut, which means the cut surface will be absolutely smooth. Unlike a chef knife, where you're often cutting away from yourself, you cut towards yourself with a sashimi knife. Ever seen or bowed a violin? It's pretty much like that. Very little pressure, let the knife do the cutting as you pull it in.
 
 ![](/gh-weblog-2/images/knives/knives-08.jpg)
 
