Saving new entry 2016-01-31-19-05-22

--- a/gh-weblog-2/content/posts/markdown/2016-01-31-19-05-22.md
+++ b/gh-weblog-2/content/posts/markdown/2016-01-31-19-05-22.md
@@ -53,7 +53,7 @@ Unlike a sharp cleaver, bone cleavers *are* wielded like hatchets: it's pretty m
 
 ![](/gh-weblog-2/images/knives/knives-08.jpg)
 
-Unlike the previous knives, this is a single sided knife: it's perfectly flat on the left side, and ground to an extremely sharp edge on the other. At least for sashimi, this means you don't disturb half the cut by "pushing it out of the way", which a normal sided knife will do.
+Unlike the previous knives, this is a single sided knife: it's perfectly flat on the left side, and ground to an extremely sharp edge on the other. At least for sashimi, this means you don't disturb half the cut by "pushing it out of the way", which a "normal" double sided knife will do.
 
 ## A deba fish knife
 ![](/gh-weblog-2/images/knives/knives-09.jpg)
