Saving new entry 2016-01-31-19-05-22

--- a/gh-weblog-2/content/posts/markdown/2016-01-31-19-05-22.md
+++ b/gh-weblog-2/content/posts/markdown/2016-01-31-19-05-22.md
@@ -32,7 +32,7 @@ A paring knife is the scalpel of the basic set. It's not good for any kind of sl
 ## A nice sharp cleaver
 ![](/gh-weblog-2/images/knives/knives-05.jpg)
 
-While this looks like a super heavy thing, and it's certainly heavier than a regular knife, this old Solingen cleaver is essentially the same as a thick Chinese cleaver. It has a sharp edge, and can be used for cutting, and because of the geometry of the blade near the handle, shucking oysters or other shellfish, and of course it's a cleaver so you can use it to cleave, although it's mostly for cleaving *soft* things.
+While this looks like a super heavy thing, and it's certainly heavier than a regular knife, this old Solingen cleaver is essentially the same as a thick Chinese cleaver. It has a sharp edge, and can be used for cutting, chopping, and because of the geometry of the blade near the handle, shucking oysters or other shellfish. And, of course, it's a cleaver so you can use it to cleave, although it's mostly for cleaving *soft* things.
 
 Simple rule: things with sharp edges are meant for cutting, not hitting. The value in a cleaver is its size and solidity; do the initial cut, drive the cleaver in, then drive it through. The softer the thing you're cleaving, the more you can "chop" rather than drive, but this is not TV, and you don't wield a regular cleaver like it's a hatchet.   
 
