Saving new entry 2016-02-24-16-48-25

--- a/gh-weblog-2/content/posts/markdown/2016-02-24-16-48-25.md
+++ b/gh-weblog-2/content/posts/markdown/2016-02-24-16-48-25.md
@@ -1,1 +1,43 @@
 In a [recent post on their blog](https://github.com/blog/2112-delivering-octicons-with-svg), [github](github.com) announced that  they've moved away from icon fonts in favour of SVG. In itself perfectly fine, use whatever works best, and if fonts aren't working for you, switch; but their explanation of what was wrong makes several kinds of no sense.
+
+This is going to be a bit of a rant, feel free to ignore it, but here goes.
+
+The images shown on the blog post to show a "badly blurred font icon" vs "a nicely crisp image icon" are both blurry. Neither is particularly better than the other at the scale shown, so there is no case there to determine which is better. They're both bad.
+
+## Icon font rendering issues
+
+The first section is 100% true. Github notes that "Icon fonts have always been a hack", and they have. Unicode these days comes with dingbats/windings, symbol sets, and emoji, but none of those things are true icons. Icon fonts will typically either inappropriately use "real letter" code points for icons ("you use class `.left-arrow` but it renders because it asks the letter `a` from the font, which happens to be an icon) or they use PUA (the Private Use Area of fonts) and some kind of substitution ruleset for finding icons in that area (because you can't really type PUA letters on your keyboard).
+
+So far so good. Except that's not a reason to switch, that's merely stating the facts. Fonts for icons are hacks. Do they get the job done? Certainly. This does not count towards the "reasons to switch" yet.
+
+## Page rendering improvements
+
+There was an assumption that SVG would improve page performance. However, as they note later, it didn't. This is in fact the right thing to do: test which one is better. But if there is no real difference then it cannot count as reason to switch. It is in fact a reason to tell others "if this is why you're thinking of switching, it doesn't matter, here's our findings: ..."
+
+So we have no reasons to switch yet.
+
+## Accessibility
+
+This one's interesting. "some people use their own fonts, so our fonts don't render" may be a problem. Github has *a lot* of users, but "people using their own fonts" typically also means those people do so by choice. If overriding the icon font is adverse, they presumably have the power to each fix that, but chose not to. That's not Github's responsibility to fix, but it can certainly be something Github can fix "as one party" instead of every user who's affected fixing it "as a million parties". It's not an argument for "anyone" to switch from fonts to SVG, but it's an argument for Github, as a millions-of-users-daily service, to switch.
+
+The second argument is about screen readers, but the nature of icons is that they are non-semantic. The hypothetical ability to add readable alt texts does not apply here: if your icon needs an alt-text read in order for your UI to make sense, that icon is not an icon, it's a genuine semantic element and you should not be using an icon to hide what it is. You confuse *everyone* with that kind of icon use, not just people who need screen readers.
+
+## Properly sized glyphs
+
+This one's a bit odd, because it both makes sense and absolutely not. I'm paraphrasing, but this section has a rational along the lines of "vector fonts render horribly at small point sizes" (which is [absolutely true](http://rastertragedy.com) "as opposed to SVG, which renders pixel-perfect" (which is absolutely false). It's like saying "my bike is horrible at going highway speeds, and that's why we're no longer using the highway" instead of going "and that's why we changed to a car". If you want pixel-perfect icons, use pixel fonts.
+
+"But modern fonts are vector fonts!" No, they are not. Modern fonts, in fact, can do vectors, as well as true pixel bitmaps specifically to deal with the issue of "it renders all kinds of bad at low point sizes". In fact, any icon font that doesn't have EBDT (embedded bitmap data) for low point sizes that its vector shapes cannot be cleanly scaled to is a bad icon font. Use a better one.
+
+Now, if there are no better ones out there: that would be a great reason to switch to SVG. I like Github and I assume they looked and couldn't find one. But as phrased, this section didn't actually gave a good rationale so much as highlighted that someone didn't understand how modern fonts work and made assumptions about what the problem was. To someone intimately familiar with the inner workings of fonts, this section instead reads as a symptom description, not a problem description, and fixing the symptom does not solve the underlying problem. Any vector graphic will render terribly at certain low point sizes: you've traded the symptom in technology X for the same symptom exposed at different times in technology Y.
+
+## Ease of authoring
+
+No two ways about it: if you want to control your icons, SVG is a hell of a lot easier than fonts. Go with SVG! It's the right choice! 
+
+## We can animate them
+
+Get out. If you're arguing accessibility as part of your rationale, don't even go here.
+
+# Should Github switch?
+
+Of course they should, it's their site. If they feel better with an SVG solution compared to fonts, then that's all the rationale they need. But then it would be nice if their blog post acknowledged that the only objective justification, performance, turns out to not actually factor into making any difference whatsoever, and that they're doing this mostly because it's easier to work with from a continuous update perspective. I'm sure we'd understand that, too.
