--- a/gh-weblog-2/content/posts/markdown/2016-02-24-16-48-25.md
+++ b/gh-weblog-2/content/posts/markdown/2016-02-24-16-48-25.md
@@ -12,7 +12,7 @@ So far so good. Except that's not a reason to switch, that's merely stating the 
 
 ## Page rendering improvements
 
-There was an assumption that SVG would improve page performance. However, as they note later, it didn't. This is in fact the right thing to do: test which one is better. But if there is no real difference then it cannot count as reason to switch. It is in fact a reason to tell others "if this is why you're thinking of switching, it doesn't matter, here's our findings: ..."
+There was an assumption that SVG would improve page performance. However, as they note later, [there's no clear evidence of that](https://cloud.githubusercontent.com/assets/54012/13176951/eedb1330-d6e3-11e5-8dfb-99932ff7ee25.png). This is in fact the right thing to do: test which one is better. But if there is no real difference then it cannot count as reason to switch. It is in fact a reason to tell others "if this is why you're thinking of switching, it doesn't matter, here's our findings: ..."
 
 So we have no reasons to switch yet.
 
