--- a/gh-weblog-2/content/posts/markdown/2016-02-24-16-48-25.md
+++ b/gh-weblog-2/content/posts/markdown/2016-02-24-16-48-25.md
@@ -18,9 +18,9 @@ So we have no reasons to switch yet.
 
 ## Accessibility
 
-This one's interesting. "some people use their own fonts, so our fonts don't render" may be a problem. Github has *a lot* of users, but "people using their own fonts" typically also means those people do so by choice. If overriding the icon font is adverse, they presumably have the power to each fix that, but chose not to. That's not Github's responsibility to fix, but it can certainly be something Github can fix "as one party" instead of every user who's affected fixing it "as a million parties". It's not an argument for "anyone" to switch from fonts to SVG, but it's an argument for Github, as a millions-of-users-daily service, to switch.
+This one's interesting. "some people use their own fonts, so our fonts don't render" may be a problem. Github has *a lot* of users, but "people using their own fonts" typically also means those people do so by choice. If overriding the icon font is adverse, they presumably have the power to each fix that, but chose not to. That's not Github's responsibility to fix, but it can certainly be something Github can fix "as one party" instead of every user who's affected fixing it "as a million parties". It's not an argument to switch from fonts to SVG in general, but it's an argument for why Github, as a trusted and liked millions-of-users-daily service, to lend a helping hand.
 
-The second argument is about screen readers, but the nature of icons is that they are non-semantic. The hypothetical ability to add readable alt texts does not apply here: if your icon needs an alt-text read in order for your UI to make sense, that icon is not an icon, it's a genuine semantic element and you should not be using an icon to hide what it is. You confuse *everyone* with that kind of icon use, not just people who need screen readers.
+The second argument concerns screen readers, but glosses over the nature of an icon in a UI. Icons are non-semantic, they're decoration around the actual thing. The hypothetical ability to add readable `alt` texts because the icons are now true images does not apply: if your icon needs an alt-text read out to the user in order for them to understand your UI, that icon is not an icon, it's a genuine semantic element and you should not be using an icon to hide what it is. In fact, you confuse *everyone* with that kind of icon use, not just people who need, or are better served by using, screen readers.
 
 ## Properly sized glyphs
 
