--- a/gh-weblog-2/content/posts/markdown/2016-02-24-16-48-25.md
+++ b/gh-weblog-2/content/posts/markdown/2016-02-24-16-48-25.md
@@ -24,11 +24,11 @@ The second argument concerns screen readers, but glosses over the nature of an i
 
 ## Properly sized glyphs
 
-This one's a bit odd, because it both makes sense and absolutely not. I'm paraphrasing, but this section has a rational along the lines of "vector fonts render horribly at small point sizes" (which is [absolutely true](http://rastertragedy.com) "as opposed to SVG, which renders pixel-perfect" (which is absolutely false). It's like saying "my bike is horrible at going highway speeds, and that's why we're no longer using the highway" instead of going "and that's why we changed to a car". If you want pixel-perfect icons, use pixel fonts.
+This one's a bit odd, because it both makes sense and absolutely not. I'm paraphrasing, but this section has a rational along the lines of "vector fonts render horribly at small point sizes", which is [absolutely true](http://rastertragedy.com, "as opposed to SVG, which renders pixel-perfect", which is absolutely false.  Both are vector graphics, and both suffer from the exact same problem scaled down. However, fonts can come with instructions on how to correct outlines, and SVG cannot. Unfortunately the choice between `ttf` and `otf` matters *a lot* here: `ttf` uses true instructions, and `otf` uses hints. If you try to use an `otf` icon font with a render engine that doesn't have a good "what should I do with these hints" implementation, your icons will look terrible. Turns out that's the state of technology right now. So that's an argument to use `ttf` rather than `otf, rather than exchanging one vector format for another.
 
-"But modern fonts are vector fonts!" No, they are not. Modern fonts, in fact, can do vectors, as well as true pixel bitmaps specifically to deal with the issue of "it renders all kinds of bad at low point sizes". In fact, any icon font that doesn't have EBDT (embedded bitmap data) for low point sizes that its vector shapes cannot be cleanly scaled to is a bad icon font. Use a better one.
+Vector graphics are always worse than bitmaps if you want pixel-perfect icons, so: why not use bitmaps for the "it scales poorly" cases? I know what you're thinking: "but modern fonts are vector fonts!" Not really, no. Modern fonts can do *a lot* of things, and one of those things is that they can contain pixel-perfect bitmaps to be used when a sequence of glyphs needs to be shaped at *specific* point sizes, for pixel-perfect rendering (using the EBDT, Embedded Bitmap Data Table). If your icon font of choice doesn't come with those, then that's an argument for improving things on the font side, so that everyone who uses that font gets a better deal out of it.
 
-Now, if there are no better ones out there: that would be a great reason to switch to SVG. I like Github and I assume they looked and couldn't find one. But as phrased, this section didn't actually gave a good rationale so much as highlighted that someone didn't understand how modern fonts work and made assumptions about what the problem was. To someone intimately familiar with the inner workings of fonts, this section instead reads as a symptom description, not a problem description, and fixing the symptom does not solve the underlying problem. Any vector graphic will render terribly at certain low point sizes: you've traded the symptom in technology X for the same symptom exposed at different times in technology Y.
+Of course, in the mean time you might consider changing over to SVG because you want to solve the problem "now", and I like Github and assume they looked and couldn't find one. But as phrased, this section didn't actually gave a good rationale for switching to SVG so much as highlighted a misunderstanding on how modern fonts work and showing that assumptions were made about what the problem was. To someone familiar with the inner workings of fonts, this section reads as a symptom description, not a problem description, and fixing the symptom does not solve the underlying problem. *Any vector graphic* will render terribly at low point sizes, trading one for another just [passes the buck](https://en.wikipedia.org/wiki/Buck_passing).
 
 ## Ease of authoring
 
