Saving new entry 2016-02-24-16-48-25

--- a/gh-weblog-2/content/posts/markdown/2016-02-24-16-48-25.md
+++ b/gh-weblog-2/content/posts/markdown/2016-02-24-16-48-25.md
@@ -40,4 +40,6 @@ Get out. If you're arguing accessibility as part of your rationale, don't even g
 
 # Should Github switch?
 
-Of course they should, it's their site. If they feel better with an SVG solution compared to fonts, then that's all the rationale they need. But then it would be nice if their blog post acknowledged that the only objective justification, performance, turns out to not actually factor into making any difference whatsoever, and that they're doing this mostly because it's easier to work with from a continuous update perspective. I'm sure we'd understand that, too.
+Of course they should, it's their site. If they feel better with an SVG solution compared to fonts, then that's all the rationale they need. But then it would be nice if their blog post acknowledged that the only objective justification that was described, performance, turned out to not be significantly impacted by the switch, and that they've gone through with the switch mostly because it's easier to work with from a continuous update perspective, and also quite likely because if you've done all that work already to test deploying SVG instead of fonts, why not flip the switch.
+
+I'm sure we'd understand that, too.
