Saving new entry 2016-02-24-16-48-25

--- a/gh-weblog-2/content/posts/markdown/2016-02-24-16-48-25.md
+++ b/gh-weblog-2/content/posts/markdown/2016-02-24-16-48-25.md
@@ -1,6 +1,6 @@
 In a [recent post on their blog](https://github.com/blog/2112-delivering-octicons-with-svg), [github](github.com) announced that  they've moved away from icon fonts in favour of SVG. In itself perfectly fine, use whatever works best, and if fonts aren't working for you, switch; but their explanation of what was wrong makes several kinds of no sense.
 
-This is going to be a bit of a rant, feel free to ignore it, but here goes.
+This is going to be a bit of a rant, it's going to conclude with "should they switch? absolutely! yay github" but the rest of the text is about how their blog post doesn't feel like it actually contains any proper rationale for the move. You can stop reading if you only wanted to know my concluding thoughts. As far as I'm concerned, they did the right thing, for the wrong reasons.
 
 The images shown on the blog post to show a "badly blurred font icon" vs "a nicely crisp image icon" are both blurry. Neither is particularly better than the other at the scale shown, so there is no case there to determine which is better. They're both bad.
 
