--- a/gh-weblog-2/content/posts/markdown/2016-02-24-16-48-25.md
+++ b/gh-weblog-2/content/posts/markdown/2016-02-24-16-48-25.md
@@ -2,7 +2,9 @@ In a [recent post on their blog](https://github.com/blog/2112-delivering-octicon
 
 This is going to be a bit of a rant, it's going to conclude with "should they switch? absolutely! yay github" but the rest of the text is about how their blog post doesn't feel like it actually contains any proper rationale for the move. You can stop reading if you only wanted to know my concluding thoughts. As far as I'm concerned, they did the right thing, for the wrong reasons.
 
-The images shown on the blog post to show a "badly blurred font icon" vs "a nicely crisp image icon" are both blurry. Neither is particularly better than the other at the scale shown, so there is no case there to determine which is better. They're both bad.
+## Showing the problem
+
+The post starts with images that show a "badly blurred font icon" vs "a nicely crisp image icon", except what it really shows are two equally blurry, terrible images. Neither is particularly better than the other at the scale shown; they're differently blurry, but they're both terrible, and using this as a highlight of the problem shows that (unsurprisingly) a vector approach to icons is a weird solution to a problem predominantly caused by small-scale rendering of graphics designed using large scale units. They're both bad, so the rest of the post better be good at explaining why you want the lesser of two "evils" instead of finding a third "good".
 
 ## Icon font rendering issues
 
