Saving new entry 2016-02-24-16-48-25

--- a/gh-weblog-2/content/posts/markdown/2016-02-24-16-48-25.md
+++ b/gh-weblog-2/content/posts/markdown/2016-02-24-16-48-25.md
@@ -16,7 +16,9 @@ So far so good. Except that's not a reason to switch, that's merely stating the 
 
 There was an assumption that SVG would improve page performance. However, as they note later, [there's no clear evidence of that](https://cloud.githubusercontent.com/assets/54012/13176951/eedb1330-d6e3-11e5-8dfb-99932ff7ee25.png). To be clear: this is completely the right thing to do: you have two possible options, you test both, and then use metrics to determine which one is better. But if there is no real difference then it cannot count as reason to switch. It is in fact a reason to tell others "if this is why you're thinking of switching, it doesn't matter, here's our findings: ..."
 
-So we have no reasons to switch yet.
+I've [talked about this on Stackoverflow](http://stackoverflow.com/a/30821089/740553) before, and none of that has changed so far.
+
+So far, we have no justifiable reason to switch yet (other than just "let's do this").
 
 ## Accessibility
 
