--- a/gh-weblog-2/content/posts/markdown/2016-02-24-16-48-25.md
+++ b/gh-weblog-2/content/posts/markdown/2016-02-24-16-48-25.md
@@ -2,6 +2,8 @@ In a [recent post on their blog](https://github.com/blog/2112-delivering-octicon
 
 This is going to be a bit of a rant, it's going to conclude with "should they switch? absolutely! yay github" but the rest of the text is about how their blog post doesn't feel like it actually contains any proper rationale for the move. You can stop reading if you only wanted to know my concluding thoughts. As far as I'm concerned, they did the right thing, for the wrong reasons.
 
+Also, I've [talked about this on Stackoverflow](http://stackoverflow.com/a/30821089/740553) before, so if you ever ran into that post, the following analysis should not come as anything even close to a surprise to you.
+
 ## Showing the problem
 
 The post starts with images that show a "badly blurred font icon" vs "a nicely crisp image icon", except what it really shows are two equally blurry, terrible images. Neither is particularly better than the other at the scale shown; they're differently blurry, but they're both terrible, and using this as a highlight of the problem shows that (unsurprisingly) a vector approach to icons is a weird solution to a problem predominantly caused by small-scale rendering of graphics designed using large scale units. They're both bad, so the rest of the post better be good at explaining why you want the lesser of two "evils" instead of finding a third "good".
@@ -15,8 +17,6 @@ So far so good. Except that's not a reason to switch, that's merely stating the 
 ## Page rendering improvements
 
 There was an assumption that SVG would improve page performance. However, as they note later, [there's no clear evidence of that](https://cloud.githubusercontent.com/assets/54012/13176951/eedb1330-d6e3-11e5-8dfb-99932ff7ee25.png). To be clear: this is completely the right thing to do: you have two possible options, you test both, and then use metrics to determine which one is better. But if there is no real difference then it cannot count as reason to switch. It is in fact a reason to tell others "if this is why you're thinking of switching, it doesn't matter, here's our findings: ..."
-
-I've [talked about this on Stackoverflow](http://stackoverflow.com/a/30821089/740553) before, and none of that has changed so far.
 
 So far, we have no justifiable reason to switch yet (other than just "let's do this").
 
