Saving new entry 2016-02-24-16-48-25

--- a/gh-weblog-2/content/posts/markdown/2016-02-24-16-48-25.md
+++ b/gh-weblog-2/content/posts/markdown/2016-02-24-16-48-25.md
@@ -6,7 +6,7 @@ Also, I've [talked about this on Stackoverflow](http://stackoverflow.com/a/30821
 
 ## Showing the problem
 
-The post starts with images that show a "badly blurred font icon" vs "a nicely crisp image icon", except what it really shows are two equally blurry, terrible images. Neither is particularly better than the other at the scale shown; they're differently blurry, but they're both terrible, and using this as a highlight of the problem shows that (unsurprisingly) a vector approach to icons is a weird solution to a problem predominantly caused by small-scale rendering of graphics designed using large scale units. They're both bad, so the rest of the post better be good at explaining why you want the lesser of two "evils" instead of finding a third "good".
+The post starts with images that show a "badly blurred font icon" vs "a nicely crisp image icon", except what it really shows are two equally blurry, terrible images. Neither is particularly better than the other at the scale shown; they're differently blurry, but they're both terrible, and using this as a highlight of the problem shows that (unsurprisingly) a vector approach to icons is a weird solution to a problem predominantly [caused by small-scale rendering of graphics designed using large scale units](http://rastertragedy.com). They're both bad, so the rest of the post better be good at explaining why you want the lesser of two "evils" instead of finding a third "good".
 
 ## Icon font rendering issues
 
