Saving new entry 2016-02-24-16-48-25

--- a/gh-weblog-2/content/posts/markdown/2016-02-24-16-48-25.md
+++ b/gh-weblog-2/content/posts/markdown/2016-02-24-16-48-25.md
@@ -28,9 +28,11 @@ The second argument concerns screen readers, but glosses over the nature of an i
 
 ## Properly sized glyphs
 
-This one's a bit odd, because it both makes sense and absolutely not. I'm paraphrasing, but this section has a rational along the lines of "vector fonts render horribly at small point sizes", which is [absolutely true](http://rastertragedy.com), "as opposed to SVG, which renders pixel-perfect", which is absolutely false.  Both are vector graphics, and both suffer from the exact same problem scaled down. However, fonts can come with instructions on how to correct outlines, and SVG cannot. Unfortunately the choice between `ttf` and `otf` matters *a lot* here: `ttf` uses true instructions, and `otf` uses hints. If you try to use an `otf` icon font with a render engine that doesn't have a good "what should I do with these hints" implementation, your icons will look terrible. Turns out that's the state of technology right now. So that's an argument to use `ttf` rather than `otf, rather than exchanging one vector format for another.
+This one's a bit odd, because it both makes sense and absolutely not. I'm paraphrasing, but this section has a rational along the lines of "vector fonts render horribly at small point sizes", which is [absolutely true](http://rastertragedy.com), "as opposed to SVG, which renders pixel-perfect", which is absolutely false.  Both are vector graphics, and both suffer from the exact same problem scaled down. However, fonts can come with instructions on how to correct outlines, and SVG cannot. Unfortunately the choice between `ttf` and `otf` matters *a lot* here: `ttf` uses true instructions, and `otf` uses hints. If you try to use an `otf` icon font with a render engine that doesn't have a good "what should I do with these hints" implementation, your icons will look terrible. Turns out that's the state of technology right now. So that's an argument to use `ttf` rather than `otf`, rather than exchanging one vector format for another.
 
-Vector graphics are always worse than bitmaps if you want pixel-perfect icons, so: why not use bitmaps for the "it scales poorly" cases? I know what you're thinking: "but modern fonts are vector fonts!" Not really, no. Modern fonts can do *a lot* of things, and one of those things is that they can contain pixel-perfect bitmaps to be used when a sequence of glyphs needs to be shaped at *specific* point sizes, for pixel-perfect rendering (using the EBDT, Embedded Bitmap Data Table). If your icon font of choice doesn't come with those, then that's an argument for improving things on the font side, so that everyone who uses that font gets a better deal out of it.
+The blog post does talk about SVG not getting subpixel-hinted, which "fixes" things, but if that's the case you've found a bug in the text render pipeline: file that so it can be fixed. In fact as [Keyamoon points out](https://twitter.com/Keyamoon/status/703530343169560576), this is not the case in Firefox, and *wasn't* the case in previous versions of Chrome. As arguably the most important playing in Open Source Software at the moment, I would expect Github to help get this fixed instead of walking away from a problem like that.
+
+But why go from one vector format to another? Vector graphics are always worse than bitmaps if you want pixel-perfect icons, so: why not  keep using fonts, with bitmaps for the "it scales poorly" cases? I know what you're thinking: "but modern fonts are vector fonts!" Not really, no. Modern fonts can do *a lot* of things, and one of those things is that they can contain pixel-perfect bitmaps to be used when a sequence of glyphs needs to be shaped at *specific* point sizes, for pixel-perfect rendering (using the EBDT, Embedded Bitmap Data Table). If your icon font of choice doesn't come with those, then that's an argument for improving things on the font side, so that everyone who uses that font gets a better deal out of it.
 
 Of course, in the mean time you might consider changing over to SVG because you want to solve the problem "now", and I like Github and assume they looked and couldn't find one. But as phrased, this section didn't actually gave a good rationale for switching to SVG so much as highlighted a misunderstanding on how modern fonts work and showing that assumptions were made about what the problem was. To someone familiar with the inner workings of fonts, this section reads as a symptom description, not a problem description, and fixing the symptom does not solve the underlying problem. *Any vector graphic* will render terribly at low point sizes, trading one for another just [passes the buck](https://en.wikipedia.org/wiki/Buck_passing).
 
