Saving new entry 2016-02-24-16-48-25

--- a/gh-weblog-2/content/posts/markdown/2016-02-24-16-48-25.md
+++ b/gh-weblog-2/content/posts/markdown/2016-02-24-16-48-25.md
@@ -34,7 +34,7 @@ The blog post does talk about SVG not getting subpixel-hinted, which "fixes" thi
 
 But why go from one vector format to another? Vector graphics are always worse than bitmaps if you want pixel-perfect icons, so: why not  keep using fonts, with bitmaps for the "it scales poorly" cases? I know what you're thinking: "but modern fonts are vector fonts!" Not really, no. Modern fonts can do *a lot* of things, and one of those things is that they can contain pixel-perfect bitmaps to be used when a sequence of glyphs needs to be shaped at *specific* point sizes, for pixel-perfect rendering (using the EBDT, Embedded Bitmap Data Table). If your icon font of choice doesn't come with those, then that's an argument for improving things on the font side, so that everyone who uses that font gets a better deal out of it.
 
-Of course, in the mean time you might consider changing over to SVG because you want to solve the problem "now", and I like Github and assume they looked and couldn't find one. But as phrased, this section didn't actually give a good rationale for switching to SVG so much as highlighted a misunderstanding on how modern fonts work and showing that assumptions were made about what the problem was. To someone familiar with the inner workings of fonts, this section reads as a symptom description, not a problem description, and fixing the symptom does not solve the underlying problem. *Any vector graphic* will render terribly at low point sizes, trading one for another just [passes the buck](https://en.wikipedia.org/wiki/Buck_passing).
+Of course, in the mean time you might consider changing over to SVG because you want to solve the problem "now", and I like Github and assume they looked and couldn't find one. But as phrased, this section didn't actually give a good rationale for switching to SVG so much as highlighted a misunderstanding on how modern fonts work and showing that assumptions were made about what the problem was, leading to an action that doesn't *solve* the problem: to someone familiar with the inner workings of fonts, this section reads as a symptom description, not a problem description, and fixing the symptom does not solve the underlying problem. *Any vector graphic* will render terribly at low point sizes, trading one for another just [passes the buck](https://en.wikipedia.org/wiki/Buck_passing).
 
 ## Ease of authoring
 
