--- a/gh-weblog-2/content/posts/markdown/2016-03-10-23-12-29.md
+++ b/gh-weblog-2/content/posts/markdown/2016-03-10-23-12-29.md
@@ -1,5 +1,9 @@
-Ever drawn some paths in Photoshop, and wanted to export those paths for use in other, probably not-Adobe, products? Because that's kind of ... impossible.
+Ever drawn some paths in Photoshop, and wanted to export those paths for use in something that **isn't** Adobe Illustrator? Because that's kind of ... impossible. Photoshop lets you export your working paths specifically for Illustrator, using the `.ia` format, but if you want to load it in something else? And heaven forbid, some Open Source package that doesn't even support proprietary formats? You have a problem.
 
-Or, it was, now it isn't, because I needed this functionality and happened to know that Photoshop has a Javascript API. Well... sort of. It has an API for a truly *ancient* version of Javascript (an almost 20 year old flavour, in fact), so there were some things that needing some shimming. Basic things like `Array.forEach` didn't exist 20 years ago so after writing shims for `forEach`, `map` and `Object.keys`, I was able to write a script that lets you simply call *file* → *scripts* → *browse* and then run it, which immediately generates the SVG code for all your paths as a single SVG document and copies the code for it into your clipboard.
+Or, "had", because now you can export your paths to SVG instead. I needed this functionality for some glyph tracing I'm doing (tracing in Photoshop, but ultimately the glyph needs to end up in FontForge) and as it so happens I know that Photoshop has a Javascript API. So how hard could it be to create an "export to SVG" option?
+
+Well... sort of hard. While PS supports JS, the API it has uses a *truly ancient* version of Javascript (an almost 20 year old flavour, in fact), so there were some things that we pretty much rely on these days that simply didn't exist back then. Basic things like `Array.forEach` aren't supported, so after writing shims for `forEach`, `map` and `Object.keys`, I was able to write a script that lets you simply call *file* → *scripts* → *browse* and then run it, which immediately generates the SVG code for all your paths as a single SVG document and copies the code for it into your clipboard.
+
+Internally, Photoshop stores paths as multiple paths per document, multiple subpaths per path, and each subpath consists of an array of points. Each point is either 
 
 Done, as the say. Head on over to https://github.com/Pomax/photoshop-paths-to-SVG to grab the script and let me know if you find it useful or have ideas on how to improve it.
