Saving new entry 2016-03-10-23-12-29

--- a/gh-weblog-2/content/posts/markdown/2016-03-10-23-12-29.md
+++ b/gh-weblog-2/content/posts/markdown/2016-03-10-23-12-29.md
@@ -1,12 +1,12 @@
-Ever drawn some paths in Photoshop, and wanted to export those paths for use in something that **isn't** Adobe Illustrator? Because that's kind of ... impossible. Photoshop lets you export your working paths specifically for Illustrator, using the `.ia` format, but if you want to load it in something else? And heaven forbid, some Open Source package that doesn't even support proprietary formats? You have a problem.
+Ever drawn some paths in [Adobe](https://adobe.com)'s [Photoshop](https://adobe.com/photoshop), and wanted to export those paths for use in something that **isn't** Adobe Illustrator? Because that's kind of ... impossible. Photoshop lets you export your working paths specifically for Illustrator, using the `.ia` format, but if you want to load it in something else? And heaven forbid, some Open Source package that doesn't even support proprietary formats? You have a problem.
 
-Or, "had", because now you can export your paths to SVG instead. I needed this functionality for some glyph tracing I'm doing (tracing in Photoshop, but ultimately the glyph needs to end up in FontForge) and as it so happens I know that Photoshop has a Javascript API. So how hard could it be to create an "export to SVG" option?
+Or, "had", because now you can export your paths to SVG instead. I needed this functionality for some glyph tracing I'm doing (tracing in Photoshop, but ultimately the glyph needs to end up in [FontForge](http://fontforge.github.io)) and as it so happens I know that Photoshop [has a Javascript API](https://www.adobe.com/content/dam/Adobe/en/products/photoshop/pdfs/cs6/Photoshop-CS6-JavaScript-Ref.pdf). So how hard could it be to create an "export to SVG" option?
 
-Well... sort of hard. While PS supports JS, the API it has uses a *truly ancient* version of Javascript (an almost 20 year old flavour, in fact), so there were some things that we pretty much rely on these days that simply didn't exist back then. Basic things like `Array.forEach` aren't supported, so after writing shims for `forEach`, `map` and `Object.keys`, I was able to write a script that lets you simply call *file* → *scripts* → *browse* and then run it, which immediately generates the SVG code for all your paths as a single SVG document and copies the code for it into your clipboard.
+Well... sort of hard. While PS supports JS, the API it has uses a *[truly ancient](https://en.wikipedia.org/wiki/JavaScript#Version_history)* version of Javascript (v1.3 from what I can tell.. an almost 20 year old flavour), so there were some things that we pretty much rely on these days that simply didn't exist back then. Basic things like `Array.forEach` aren't supported, so after writing shims for `[forEach](https://developer.mozilla.org/docs/Web/JavaScript/Reference/Global_Objects/Array/forEach)`, `[map](https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/Array/map)` and `Object.keys`, I was able to write a script that lets you simply call *file* → *scripts* → *browse* and then run it, which immediately generates the SVG code for all your paths as a single SVG document and copies the code for it into your clipboard.
 
 Internally, Photoshop stores paths as "multiple paths per document", with "multiple sub-paths per path", and each sub-path consists of an array of points. These points can either be corner points or "smooth" points, meaning they're Bezier curve points, and that's all the information you get.
 
-Of course, while this is a normal way to encode data, SVG path instructions are of the form "Line to x/y" or "Cubic curve over c1 and c1 to x/y", so in order to generate the correct path instructions, the code needs to walk over each sub-path using a two point window, and check whether it's generating code for going from corner to corner, corner to curve, curve to corner, or curve to curve; each of those four has a different way to unpack the information contained by the two points into a single SVG pathing instruction.
+Of course, while this is a normal way to encode data, [SVG path instructions](https://www.w3.org/TR/SVG/paths.html#PathData) are of the form "Line to x/y" or "Cubic curve over c1 and c1 to x/y", so in order to generate the correct path instructions, the code needs to walk over each sub-path using a two point window, and check whether it's generating code for going from corner to corner, corner to curve, curve to corner, or curve to curve; each of those four has a different way to unpack the information contained by the two points into a single SVG pathing instruction.
 
 But, with that done, the result is a Photoshop script that with just a few clicks drops your entire working path collection into an SVG document in your clipboard. If that sounds useful to you, head on over to https://github.com/Pomax/photoshop-paths-to-SVG and grab the script for yourself.
 
